--- a/LibServer/templates/config/base.html
+++ b/LibServer/templates/config/base.html
@@ -22,21 +22,6 @@
    <button type="submit" class="btn btn-primary">Save</button> <button type="reset" class="btn btn-warning">Reset</button>
  </div>
  </div>{%- endmacro %}
-{#
-required content:
-
-current_page -> name of the current section being edited.
-config_pages -> dictionary of available top level sections.
-
-Optionally:
-
-subpages     -> dictionary of subpages (used for sidebar)
-current_subpage -> name of current subpage we're on.
-
-This template is used for "single" section configuration items. We provide a sidebar with a list
-of all the known top level sections that can be configured, while the current section sits in the
-center of the content block. 
-#}
 {% block content %}
 
 <!-- Begin configuration area container. -->
@@ -45,13 +30,6 @@ center of the content block.
     <div class="col-md-9 col-md-push-3">
     
       <ol class="breadcrumb">
-        <li><a href="{{ url_for('config_index')}}">Configuration</a></li>
-      {% if not current_subpage %}
-        <li class="active">{{ config_pages[current_page].short }}</li>
-      {% else %}
-        <li><a href="{{ url_for('config_group', group=current_page) }}">{{ config_pages[current_page].short }}</a></li>
-        <li>{{ current_subpage }}</li>
-      {%endif%}
       </ol>
     
       <form class="form-horizontal" role="form" method="POST" action="{{url_for('write_config', section=ini_section or '')}}">
@@ -69,28 +47,24 @@ center of the content block.
     </div>
     <!-- sidebar -->
     <div class="col-md-3 col-md-pull-9">
-    <div class="panel panel-default">
-    <!-- Default panel contents -->
-      <!-- List group -->
-      <div class="list-group">
-      {% for top_section in config_pages %}
-        {% if top_section == current_page %}
-            <div class="list-group-item active"><i class="{{config_pages[top_section].icon}} fa-fw"></i> {{config_pages[top_section].name}}</div>
-          {% if subpages %}
-          <div class="list-group-item">
-            <ul class="nav nav-pills nav-stacked">
-            {% for subpage in subpages %}
-                <li{% if subpage["name"] == current_subpage %} class="active"{% endif %}><a href="{{url_for('config_item', group=subpage.group, item=subpage.name)}}">{{subpage["label"]}}</a></li>
-            {% endfor %} {# subpage loop #}
-            </ul>
-          </div>
-          {% endif %} {# are are there subpages? #}
-        {% else %} {# not not current page #}
-        <a href="{{ url_for('config_group', group=top_section)}}" class="list-group-item"><i class="{{config_pages[top_section].icon}} fa-fw"></i> {{config_pages[top_section].name}}</a>
-        {% endif %} {# current page check #}
-      {% endfor %}
-      </div>
-    </div>
+        <!-- begin sidebar content -->
+        <div class="list-group">
+        {% for group in sidebar %}
+        <!-- group = {{group}}-->
+        {% if group == current_group %}
+            <a href="{{url_for('config_section', section=sidebar[group].section)}}" class="list-group-item active">{{sidebar[group].name}}</a>
+            {% if sidebar[group].children %}
+            <div class="list-group-item"><ul class="nav nav-pills nav-stacked">
+                {% for child in sidebar[group].children %}
+                <li {%if child.section == current_section %}class="active"{%endif%} ><a href="{{url_for('config_section', section=child.section)}}">{{child.name}} ({{child.section}})</a></li>
+                {% endfor %}
+            </ul></div>
+            {%endif%}
+        {% else %}
+        <a class="list-group-item" href="{{url_for('config_section', section=sidebar[group].section)}}">{{sidebar[group].name}}</a>
+        {% endif %}
+        {% endfor %}
+        </div>
     </div>
   </div>
 
