--- a/LibServer/templates/layout.html
+++ b/LibServer/templates/layout.html
@@ -29,7 +29,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('home') }}"><i class="fa fa-home fa-fw"></i>&nbsp;Home</a>
-                    <li><a href="{{url_for('config_index')}}"><i class="fa fa-cogs fa-fw"></i>&nbsp;Configuration</a></li>
+                    <li><a href="{{url_for('admin.config_index')}}"><i class="fa fa-cogs fa-fw"></i>&nbsp;Configuration</a></li>
                     <li><a href="#"><i class="fa fa-fw fa-tachometer"></i>&nbsp;Statistics</a></li>
 
                 </ul>
