--- a/LibServer/templates/config/base.html
+++ b/LibServer/templates/config/base.html
@@ -3,7 +3,7 @@
 {% macro field( name, label, type='text') -%}{%if type != 'checkbox'%}<div class="form-group">
  <label for="{{name}}" class="col-md-3 control-label">{{label}}</label>
  <div class="col-md-9">
-   <input type="{{type}}" class="form-control" id="{{name}}" placeholder="{{label}}" value="{{values[name] or ''}}" >
+	 <input type="{{type}}" name="{{name}}" class="form-control" id="{{name}}" placeholder="{{label}}" value="{{values[name] or ''}}" >
  </div>
  </div>{%else%} <div class="form-group">
  <div class="col-md-offset-3 col-md-9">
@@ -32,7 +32,7 @@
       <ol class="breadcrumb">
       </ol>
     
-      <form class="form-horizontal" role="form" method="POST" action="{{url_for('.write_config', section=ini_section or '')}}">
+      <form class="form-horizontal" role="form" method="POST" action="{{url_for('.write_config', section=current_section)}}">
       {% block config_page_content %}
       <!--
         This content is displayed when there is no configuration
