--- a/LibServer/static/css/cover.css
+++ b/LibServer/static/css/cover.css
@@ -26,8 +26,15 @@ a:hover {
 
 html,
 body {
+  background: url(../cover_main.jpg) no-repeat center center fixed;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   height: 100%;
   background-color: #333;
+  text-align: center;
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 body {
   color: #fff;
