Move DNSMasq and Hostapd into services just for simplicity.
This means we can now simply walk the train for each configured service, no special
options needed.

--- a/LibServer/templates/config/cfg_service.html
+++ b/LibServer/templates/config/cfg_service.html
@@ -1,7 +1,8 @@
 {% extends "config/base.html" %}
 {% block config_page_content %}
+<h1>{{current_section}}</h1>
 {{field('enabled', "Enabled", 'checkbox')}}
-
+</hr />
 {% block service_config_options %}{%endblock%}
 
 {{savebutton()}}
