--- a/LibServer/templates/config/cfg_network.html
+++ b/LibServer/templates/config/cfg_network.html
@@ -2,22 +2,26 @@
 
 {% block config_page_content  %}
 
-<h2>Dnsmasq</h2>
+<h1>Network configuration</h1>
 
-{{field("dnsmasq_enable", "Enable DNSMasq", "checkbox")}}
-{{field("dnsmasq_interface", "DNSMasq interface", "text")}}
-{{field("dnsmasq_start_address", "Starting IP", "text")}}
-{{field("dnsmasq_end_address", "Ending IP", "text")}}
-{{field("dnsmasq_subnet_mask", "Subnet mask", "text")}}
-{{field("dnsmasq_lease_time", "Lease time (in minutes)", "text")}}
-{{field("hostapd_enable", "Enable Hostapd", "checkbox")}}
-{{field("hostapd_interface", "interface", "text")}}
-{{field("hostapd_country", "Country", "text")}}
-{{field("hostapd_channel", "802.11 channel", "text")}}
-{{field("hostapd_ssid", "SSID", "text")}}
-{{field("hostapd_wpa", "Enable WPA security", "checkbox")}}
-{{field("hostapd_psk", "WPA Passphrase", "text")}}
+<p>Here you will find configuration options for the network adapters that Alexandria is set up to configure. To add one not listed here, simply add to your local configuration file the following lines:</p>
+<code><pre>[interface.<b>device name</b>]
+ui_label=<em>a short name</em>
+type=<em><b>wired</b> or <b>wireless</b></em>
+enabled=true
+; there are two modes for wireless adapters: Client and AP. In client mode, the network is
+; connected to via the /etc/network/interfacces mechanism. Otherwise, hostapd is used.
+mode=<em><b>ap</b> or <b>client</b></em>
+dhcp=<em><b>true</b> or <b>false</b></em>
+ip=<em>ip address</em>
+subnet_mask=<em>subnet mask</em>
+gateway=<em>gateway, or nothing</em>
+; wireless options
+security=<em><b>wpa</b> or <b>none</b></em>
+psk=allonewordlowercase
+ssid=cheesecake
 
-{{savebutton()}}
+
+</pre></code>
 
 {% endblock %}
