Big squashed commit:
* LibServer now has a log in page for the admin panels (and other things that need an administrative panel)
* The login page uses an optional parameter, next=? to read a signed, base64 encoded path that is the redirect point
* The upload link is there, needs to be actually implemented (TODO!)
* Installer now handles some new changes

I've moved entirely to Supervisor, which means that the supervisor process gets started by systemd as root and goes off and
spawns some new things elsewhere.

I've included a (joke? serious?) demo daemon, service.nyancat, that starts the ever wonderful nyancat in telnet mode via a small python script, tinetd.

I will likely move tinetd to its own repository. More on that later.

* A new udev rule should be added by the installer that allows the first usb device's first partition to be added as /dev/usbstor
* mount-media.sh is now called by genconfig to mount the media (should we call genconfig 'bootstrap-library.sh?")
* TODO -> udev rule needs to be added by installer.

nginx runs on 8080 for the moment, TODO: add nginx to genconfig?

--- a/LibServer/templates/browser/listing.html
+++ b/LibServer/templates/browser/listing.html
@@ -7,6 +7,9 @@
     {% for (crumb,where) in crumbs %}
         <li><a href="{{url_for('browser.browse', where=where)}}">{{crumb}}</a></li>
     {%endfor%}
+    <div class="pull-right">
+    <a href="#" class=""><i class="fa fa-upload"></i> Upload</a>
+</div>
 </ul>
 
 <div class="container-fluid">
