admin: Let there be EXTRA view!
There is now an untemplated view of any section that can be stumbled upon in the configuration. This is the same view that is presented if there is no specific template for the section, and is going to be used in the interim for enabling the internal storage on the pi once I get that working.

--- a/bin/LibServer/templates/config/base.html
+++ b/bin/LibServer/templates/config/base.html
@@ -80,6 +80,9 @@
         {% endif %}
         {% endfor %}
         </div>
+      {% if config.getBool('general','expert_mode',false) %}
+          <a href="{{url_for('.config_section', section=section, notemplate=true)}}">Advanced view</a>
+      {% endif %}
     </div>
   </div>
 
