--- a/bin/LibServer/templates/config/base.html
+++ b/bin/LibServer/templates/config/base.html
@@ -44,7 +44,7 @@
       {% if config.tainted %}
         <div class="alert alert-default">
           Configuration changes have been made, but a restart is neccesary for them to come into effect.
-          <a href="#" class="btn btn-default btn-small float-right">Restart Now</a>
+          <a href="{{url_for('.reboot_device')}}" class="btn btn-default btn-small float-right">Restart Now</a>
       </div>{% endif %}
     
       <form class="form-horizontal" role="form" method="POST" action="{{url_for('.write_config', section=current_section)}}">
@@ -64,24 +64,28 @@
     <div class="col-md-3 col-md-pull-9">
         <!-- begin sidebar content -->
         <div class="list-group">
-        {% for group in sidebar %}
+        {% for group in sidebar.keys()|sort %}
         <!-- group = {{group}}-->
         {% if group == current_group %}
-            <a href="{{url_for('.config_section', section=sidebar[group].section)}}" class="list-group-item active">{{sidebar[group].name}}</a>
+            <a href="{{url_for('.config_section', section=sidebar[group].section)}}" class="list-group-item active">
+              <i class="{{sidebar[group].icon}} fa-fw"></i>&nbsp;{{sidebar[group].name}}
+            </a>
             {% if sidebar[group].children %}
-            <div class="list-group-item"><ul class="nav nav-pills nav-stacked">
-                {% for child in sidebar[group].children %}
-                <li {%if child.section == current_section %}class="active"{%endif%} ><a href="{{url_for('.config_section', section=child.section)}}">{{child.name}} ({{child.section}})</a></li>
+              <div class="list-group-item">    
+              {% for child in sidebar[group].children %}
+                <a class="list-group-item {%if child.section == current_section %}active{%endif%}" href="{{url_for('.config_section', section=child.section)}}">
+                    <i class="fa fa-fw fa-sliders"></i>&nbsp;{{child.name}} ({{child.section}})
+                  </a>
                 {% endfor %}
-            </ul></div>
+                </div>
             {%endif%}
         {% else %}
-        <a class="list-group-item" href="{{url_for('.config_section', section=sidebar[group].section)}}">{{sidebar[group].name}}</a>
+        <a class="list-group-item" href="{{url_for('.config_section', section=sidebar[group].section)}}"><i class="{{sidebar[group].icon}} fa-fw"></i>&nbsp;{{sidebar[group].name}}</a>
         {% endif %}
         {% endfor %}
         </div>
       {% if config.getBool('general','expert_mode',false) %}
-          <a href="{{url_for('.config_section', section=section, notemplate=true)}}">Advanced view</a>
+          <a href="{{url_for('.config_section', section=current_section, notemplate='true')}}">Advanced view</a>
       {% endif %}
     </div>
   </div>
