Branding: Allow for better branding (default LibraryBox)

--- a/bin/LibServer/templates/config/cfg_network.html
+++ b/bin/LibServer/templates/config/cfg_network.html
@@ -4,7 +4,7 @@
 
 <h1>Network configuration</h1>
 
-<p>Here you will find configuration options for the network adapters that Alexandria is set up to configure. To add one not listed here, simply add to your local configuration file the following lines:</p>
+<p>Here you will find configuration options for the network adapters that {{config.product}} is set up to configure. To add one not listed here, simply add to your local configuration file the following lines:</p>
 <code><pre>[interface.<b>device name</b>]
 ui_label=<em>a short name</em>
 type=<em><b>wired</b> or <b>wireless</b></em>
