--- a/bin/LibServer/templates/layout.html
+++ b/bin/LibServer/templates/layout.html
@@ -39,7 +39,7 @@
         {% block content %}{% endblock %}
         <hr />
         <footer>
-            <p>{{config.product}} {{config.version}}</p>
+            <p>running {{config.product}}  version {{config.version}}</p>
         </footer>
     </div>
 
