--- a/bin/LibServer/templates/message.html
+++ b/bin/LibServer/templates/message.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Message: Alexandria</title>
+    <title>{{config.product}}: Message</title>
 
     <!-- Bootstrap core CSS -->
     <link href='{{url_for('static',filename='css/bootstrap.min.css')}}' rel='stylesheet'>
