--- a/bin/LibServer/templates/login.html
+++ b/bin/LibServer/templates/login.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Sign into Alexandria</title>
+    <title>Sign in</title>
 
     <!-- Bootstrap core CSS -->
     <link href='{{url_for('static',filename='css/bootstrap.min.css')}}' rel='stylesheet'>
